Github Handle made optional

--- a/templates/index.html
+++ b/templates/index.html
@@ -638,7 +638,7 @@ $('.tab a').on('click', function (e) {
               </div>
 
             <div class="field-wrap">
-                <input type="github"  name="githubhandle" id="githubhandle" placeholder="Github handle" autocomplete="off" required>
+                <input type="github"  name="githubhandle" id="githubhandle" placeholder="Github handle (Optional)" autocomplete="off">
               </div>
               <input type="submit" class="button button-block" value="Submit">
               </form>
